# purpledoc

./: .env  .gitignore  README.md  pyproject.toml  requirements.txt  start.sh
extension/: background.js  manifest.json  popup.html  popup.js
purple/: .gitignore  server.py
